package com.designPattern2;

public class Director {
    public void constructBuilding(Builder builder) {

    }

}
